--- a/webserver/templates/transactionhelper.html
+++ b/webserver/templates/transactionhelper.html
@@ -23,8 +23,8 @@
 
 <div id="find-form" style="display: none;">
   <h1>Find transactions by email</h1>
-  <label for="email">Name:</label>
-  <input type="email" id="email" name="email" required><br>
+  <label for="search-email">Name:</label>
+  <input type="search-email" id="search-email" name="search-email" required><br>
 
   <button type="button" id="search-button">Search Transactions</button>
 </div>
@@ -81,7 +81,7 @@
         });
 
   searchButton.addEventListener('click', async () => {
-            email = document.getElementById('email').value;
+            email = document.getElementById('search-email').value;
             const data = {
               'email': email
             };
