Added Client Analytics

--- a/webserver/templates/transactionhelper.html
+++ b/webserver/templates/transactionhelper.html
@@ -8,6 +8,8 @@
 
 <body>
 
+  <!-- Add form tag -->
+
   <div id="login-form">
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required><br>
@@ -26,7 +28,7 @@
 
   <div id="find-form" style="display: none;">
     <h1>Find transactions by email</h1>
-    <label for="search-email">Name:</label>
+    <label for="search-email">Email:</label>
     <input type="search-email" id="search-email" name="search-email" required><br>
 
     <button type="button" id="search-button">Search Transactions</button>
