Updated CSS for charts

--- a/webserver/templates/charttest.html
+++ b/webserver/templates/charttest.html
@@ -4,11 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Bar Chart Example</title>
+    <style>
+        body {
+    font-family: Arial, sans-serif;
+    background-color: #000;
+    color: #fff;
+    margin: 20px;
+    text-align: center;
+}
+
+.card {
+        max-width: 90%; /* Increase this value to adjust the width of the card */
+        margin: 0 auto;
+        border-radius: 4px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
+        background-color: #111; 
+        color: #fff;
+    }
+
+.card-title {
+    color: #fff;
+}
+
+.form-group,
+.btn {
+    margin-top: -10px;
+}
+
+.form-control {
+    background-color: #222; 
+    color: #fff;
+}
+
+.btn.btn-success {
+    background-color: #050505 !important;
+    border-color: #333 !important;
+}
+
+.btn.btn-success:hover {
+    background-color: #0a0a0a !important;
+    border-color: #1a1a1a !important;
+}
+
+#header-img{
+    background: black;
+    text-align: center;
+  }
+
+  #img-id{
+    width: 20%;
+  }
+    </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="chartstyle.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg-light">
+    <div id="header-img">
+        <img id="img-id" src="{{ url_for('static', filename='logo.png') }}">
+      </div>
     <div class="container mt-5">
         <div class="card shadow">
             <div class="card-body">
@@ -76,7 +129,7 @@ function renderChart(chartData, chartType) {
                 {
                     label: 'Chart Data',
                     data: chartData.map((item) => chartType === 'average_transactions' ? item.average : item.percentage),
-                    backgroundColor: 'rgba(255, 99, 132, 0.5)',
+                    backgroundColor: 'rgba(169, 169, 169, 0.5)',
                 },
             ],
         },
