--- a/webserver/templates/charttest.html
+++ b/webserver/templates/charttest.html
@@ -13,6 +13,19 @@
     text-align: center;
 }
 
+#goToTransactionHelper {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            background-color: #050505;
+            color: #fff;
+            cursor: pointer;
+            transition: background-color 0.3s, border-color 0.3s, color 0.3s;
+        }
+
 .card {
         max-width: 90%; /* Increase this value to adjust the width of the card */
         margin: 0 auto;
@@ -39,11 +52,12 @@
 .btn.btn-success {
     background-color: #050505 !important;
     border-color: #333 !important;
+    transition: background-color, border-color;
 }
 
 .btn.btn-success:hover {
-    background-color: #0a0a0a !important;
-    border-color: #1a1a1a !important;
+    background-color: red !important; 
+    border-color: red !important; 
 }
 
 #header-img{
@@ -62,6 +76,9 @@
     <div id="header-img">
         <img id="img-id" src="{{ url_for('static', filename='logo.png') }}">
       </div>
+        
+      <button id="goToTransactionHelper">Go to Transaction Helper</button>
+
     <div class="container mt-5">
         <div class="card shadow">
             <div class="card-body">
@@ -96,6 +113,10 @@ document.addEventListener('DOMContentLoaded', () => {
 
     // Render the chart with the fetched data
     renderChart(chartData[chartType], chartType);
+});
+
+document.getElementById('goToTransactionHelper').addEventListener('click', function() {
+    window.location.href = '/#find-form';
 });
 
 function fetchAndRender() {
