--- a/webserver/templates/transactionhelper.html
+++ b/webserver/templates/transactionhelper.html
@@ -161,6 +161,13 @@
       }
     });
 
+    window.onload = function() {
+    if (window.location.hash === '#find-form') {
+        loginPage.style.display = 'none';
+        document.getElementById('find-form').style.display = 'block';
+    }
+};
+
     goToSearchPage.addEventListener('click', async () => {
       email = document.getElementById('email').value;
       mainPage.style.display = 'none';
