--- a/webserver/templates/charttest.html
+++ b/webserver/templates/charttest.html
@@ -4,71 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Bar Chart Example</title>
-    <style>
-        body {
-    font-family: Arial, sans-serif;
-    background-color: #000;
-    color: #fff;
-    margin: 20px;
-    text-align: center;
-}
-
-#goToTransactionHelper {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            background-color: #050505;
-            color: #fff;
-            cursor: pointer;
-            transition: background-color 0.3s, border-color 0.3s, color 0.3s;
-        }
-
-.card {
-        max-width: 90%; /* Increase this value to adjust the width of the card */
-        margin: 0 auto;
-        border-radius: 4px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
-        background-color: #111; 
-        color: #fff;
-    }
-
-.card-title {
-    color: #fff;
-}
-
-.form-group,
-.btn {
-    margin-top: -10px;
-}
-
-.form-control {
-    background-color: #222; 
-    color: #fff;
-}
-
-.btn.btn-success {
-    background-color: #050505 !important;
-    border-color: #333 !important;
-    transition: background-color, border-color;
-}
-
-.btn.btn-success:hover {
-    background-color: red !important; 
-    border-color: red !important; 
-}
-
-#header-img{
-    background: black;
-    text-align: center;
-  }
-
-  #img-id{
-    width: 20%;
-  }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='chartstyle.css') }}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
