--- a/webserver/static/transactionhelper.css
+++ b/webserver/static/transactionhelper.css
@@ -71,7 +71,7 @@ body {
   }
 
   #analytics-button-back {
-    margin-left: -96% !important;
+    margin-left: -96%;
     padding: 10px 20px;
     margin: 10px;
     background-color: black;
@@ -136,7 +136,7 @@ body {
   }
 
   #search-again-button {
-    width: 15%;
+    width: auto;
     padding: 10px;
     background-color: black;
     color: #fff;
@@ -145,6 +145,7 @@ body {
     cursor: pointer;
     margin-left: 1%;
     display: inline-block;
+    white-space: nowrap;
   }
 
   #search-again-email{
@@ -165,7 +166,7 @@ body {
   }
 
   #search-again-button-2  {
-    width: 15%;
+    width: auto;
     padding: 10px;
     background-color: black;
     color: #fff;
@@ -174,6 +175,7 @@ body {
     cursor: pointer;
     margin-left: 1%;
     display: inline-block;
+    white-space: nowrap;
   }
   
   #search-button:hover {
